--- a/index.html
+++ b/index.html
@@ -1,104 +1,116 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="UTF-8">
-        <title> HTML FORM </title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://kit.fontawesome.com/99f391c5cd.js" crossorigin="anonymous"></script>
-    </head>
-<body>
-<div class="container">
-<div class="container-fluid bg-secondary-subtle">
-    <h4>Payment form example</h4>
-</div>
-<div class="alert alert-danger" role="alert">
-    Some fields are missing
-  </div>
-<form class="row g-3">
-    <div class="col-md-4">
-      <label for="inputCard4" class="form-label">Card #</label>
-      <input type="email" class="form-control" id="inputCard4" placeholder="#########">
+
+<head>
+  <meta charset="UTF-8">
+  <title> HTML FORM </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://kit.fontawesome.com/99f391c5cd.js" crossorigin="anonymous"></script>
+</head>
+
+<body class="vh-100 d-flex justify-content-center align-items-center">
+  <div class="container border p-0">
+    <div class="container-fluid bg-secondary-subtle p-0">
+      <h4>Payment form example</h4>
     </div>
-    <div class="col-md-4">
-      <label for="inputCVC4" class="form-label">CVC#</label>
-      <input type="password" class="form-control" id="inputCVC4" placeholder="0000">
+    <div class="alert alert-danger" role="alert">
+      Some fields are missing
     </div>
-    <div class="col-md-4">
-        <label for="inputAmount4" class="form-label">Amount</label>
-        <input type="password" class="form-control" id="inputAmount4" placeholder="Amount">
+    <form>
+      <div class="row">
+        <div class="col-md-4">
+          <label for="inputCard4" class="form-label">Card #</label>
+          <input type="email" class="form-control" id="inputCard4" placeholder="#########">
+        </div>
+        <div class="col-md-4">
+          <label for="inputCVC4" class="form-label">CVC#</label>
+          <input type="password" class="form-control" id="inputCVC4" placeholder="0000">
+        </div>
+        <div class="col-md-4">
+          <label for="inputAmount4" class="form-label">Amount</label>
+          <input type="password" class="form-control" id="inputAmount4" placeholder="Amount">
+        </div>
       </div>
-    <div class="col-6">
-      <label for="inputFirstName" class="form-label">First Name</label>
-      <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-    </div>
-    <div class="col-6">
-        <label for="inputLastName" class="form-label">Last Name</label>
-        <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+      <div class="row">
+        <div class="col-6">
+          <label for="inputFirstName" class="form-label">First Name</label>
+          <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
+        </div>
+        <div class="col-6">
+          <label for="inputLastName" class="form-label">Last Name</label>
+          <input type="text" class="form-control" id="inputLastName" placeholder="Last Name">
+        </div>
       </div>
-    <div class="col-6">
-      <label for="inputCity" class="form-label">City</label>
-      <input type="text" class="form-control" id="inputCity">
-    </div>
-    <div class="col-3">
-        <label for="inputState" class="form-label">State</label>
-      <select id="inputState" class="form-select">
-        <option>...</option>
-      </select>
+      <div class="row">
+        <div class="col-6">
+          <label for="inputCity" class="form-label">City</label>
+          <input type="text" class="form-control" id="inputCity">
+        </div>
+        <div class="col-3">
+          <label for="inputState" class="form-label">State</label>
+          <select id="inputState" class="form-select">
+            <option>...</option>
+          </select>
+        </div>
+        <div class="col-3">
+          <label for="inputPostalCode" class="form-label">Postal Code</label>
+          <input type="text" class="form-control" id="inputPostalCode">
+        </div>
       </div>
-      <div class="col-3">
-        <label for="inputPostalCode" class="form-label">Postal Code</label>
-        <input type="text" class="form-control" id="inputPostalCode">
+
+  <!-- Text box and payment methods -->
+
+  <div class="row">
+    <div class="col-6">
+      <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">We Also Accept:</label>
+      </div>
+      <div class="bg-secondary w-50 ms-2 rounded d-flex justify-content-between">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+        <label class="form-check-label" for="inlineCheckbox1">1</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+        <label class="form-check-label" for="inlineCheckbox2">2</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
+        <label class="form-check-label" for="inlineCheckbox3">3 (disabled)</label>
+      </div>
       </div>
     </div>
-    <div class="container-fluid"></div>
-    <div class="col-6">
+      <div class="col-6">
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">We Also Accept:</label>
-                <div class="form-check">
-                    <input class="form-check-input type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        <i class="fab fa-cc-visa"></i>
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        <i class="fab fa-cc-visa"></i>
-                    </label>
-                  </div>
-                  <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                    <label class="form-check-label" for="flexCheckDefault">
-                        <i class="fab fa-cc-visa"></i>
-                    </label>
-                  </div>
+          <label for="exampleMessage" class="form-label">Message</label>
+          <textarea class="form-control" id="exampleMessage" rows="3"></textarea>
+          <p class="text-body-secondary"> Add any notes here.</p>
         </div>
+      </div>
     </div>
-    <div class="col-6">
-        <div class="mb-3">
-            <label for="exampleMessage" class="form-label">Message</label>
-            <textarea class="form-control" id="exampleMessage" rows="3"></textarea>
-            <p> Add any notes here.</p>
+
+      <!-- Buttons to save or cancel-->
+
+    <div class="row p-0 m-0">
+      <div class="col-12 bg-secondary-subtle p-0 m-0">
+        <div class="container d-flex gap-2 justify-content-end p-0 m-0">
+          <button type="submit" class="btn btn-secondary">Cancel</button>
+          <button type="submit" class="btn btn-primary">Send</button>
         </div>
+      </div>
+    </div>
+
+      </form>
     </div>
   </div>
-    <div class="col-12 bg-secondary-subtle">
-        <div class="container-fluid align-items-right">
-            <button type="submit" class="btn btn-secondary">Cancel</button>
-            <button type="submit" class="btn btn-primary">Send</button>
-        </div>
-    </div>
-  </form>
-</div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
       integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
       integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"
       crossorigin="anonymous"></script>
 </body>
+
 </html>
