--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
       <div class="bg-secondary w-50 ms-2 rounded d-flex justify-content-between">
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">1</label>
+        <label class="form-check-label" for="inlineCheckbox1"><i class="fab fa-cc-visa"></i></label>
       </div>
       <div class="form-check form-check-inline">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-        <label class="form-check-label" for="inlineCheckbox2">2</label>
+        <label class="form-check-label" for="inlineCheckbox2"><i class="fab fa-cc-visa"></i></label>
       </div>
       <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
-        <label class="form-check-label" for="inlineCheckbox3">3 (disabled)</label>
+        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+        <label class="form-check-label" for="inlineCheckbox3"><i class="fab fa-cc-visa"></i></label>
       </div>
       </div>
     </div>
